src/main/java/ru/kuryakin/lab2_4/task12/Task12.g4
grammar Task12;

start       :   list;

list        :   path
            |   list ':' path;

path        :   nameDir
            |   path nameDir;

nameDir     :  '/'Name;

Name        :   ([a-zA-Z0-9]|'-'|'.'|'\'|'','|'_'|'='|'+'|'?')+;
WS          :   [ \t\r\n]+ -> skip;
